[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "CreditCardFraud"
version = "0.0.1"
description = "Predicts the probability of a transaction of being Fraud."
authors = [
  { name = "Rishab " },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["CreditCardFraud"]
force_sort_within_sections = true
